--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -1,4 +1,3 @@
-
 /**
   External
  */
@@ -8,3 +7,8 @@
   Variables
  */
 @import "variables";
+
+/**
+  Components
+ */
+@import "components/general";
