adicionando bulma.io

--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -9,6 +9,11 @@
 @import "variables";
 
 /**
-  Components
+  Bulma
  */
-@import "components/general";
+@import "~bulma/bulma";
+
+/**
+  Custom
+ */
+@import "custom/navbar";
