--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -2,5 +2,9 @@
   Body
  */
 $body-background-color: #f2f3f8;
-$body-font-size: '16px';
-$body-font-family: 'Poppins', Arial, sans-serif;
+$body-family: 'Poppins', Arial, sans-serif;
+
+/**
+  Navbar
+ */
+$navbar-height: 4.5rem;
