--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -8,3 +8,8 @@ $body-family: 'Poppins', Arial, sans-serif;
   Navbar
  */
 $navbar-height: 4.5rem;
+
+/**
+  Section
+ */
+$section-padding: 3rem 0;
